--- a/config.default.json
+++ b/config.default.json
@@ -1,15 +1,23 @@
 {{! Create a file called config.json to override settings in this file }}
 
 {
-{{! Your OAuth token for SoundCloud; scrape this from the web site. }}
-"client_id": "",
+  {{! Your OAuth token for SoundCloud; scrape this from the web site. }}
+  "client_id": "",
 
-{{! The directory to download tracks to; an SQLite database will also be stored here. }}
-"dir_name": "",
+  {{! The directory to download tracks to; an SQLite database will also be stored here. }}
+  "dir_name": "",
 
-{{! How long to wait between downloads. }}
-"download_interval": "120sec",
+  {{! Your SoundCloud username }}
+  "user_name": "",
 
-{{! How long to wait between polling your favorites list. }}
-"check_interval": "15min"
+  {{! How long to wait between downloads. }}
+  "download_interval": "120sec",
+
+  {{! How long to wait between polling your favorites list. }}
+  "check_interval": "15min",
+
+  {{! If this option is set to a number, the program will listen on the specified
+      integer port for a POST to any path. Upon receiving this request, it will
+      check for new favorites as if it had been sent a HUP. }}
+  "http_listen": null
 }
